tests/paczka1/small_fuzzy/50021192.err
Error in line 4: ZAaIzRRHZe S331 56,0
Error in line 16: ZAaIzRRHZe S260 4,38
